[package]
name = "debugserver-types"
version = "0.4.0"
authors = ["Markus Westerlind <marwes91@gmail.com>"]

build = "build.rs"

description = "Type definitions for Visual Code's debug server."
readme = "README.md"

license = "MIT"

repository = "https://github.com/Marwes/debugserver-types"
documentation = "https://docs.rs/debugserver-types"

[lib]
path = "src/lib.rs"

[dependencies]
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"

[build-dependencies]
schemafy = "0.3.0"
